# VegaMCP

./: .env.example  .gitignore  CHANGELOG.md  COMMAND_CENTER.md  Caddyfile  FEATURES.md  KIMI_CODE_SETUP.md  LICENSE  README.md  SETUP.bat  SETUP.ps1  VEGA.bat  VEGAMCP_SWARM_ARCHITECTURE.md  VEGAMCP_V3_ENHANCEMENT_PLAN.md  build-rust.cjs  check-ports.cjs  check-rust-error.cjs  check-vps-health.cjs  compile-clean.cjs  compile-rust.cjs  deploy-mjpeg.cjs  deploy-rust-vnc.cjs  deploy-vegaclaw.sh  deploy.ps1  download-err.cjs  download-server.cjs  download-worker.cjs  find-tg.cjs  find-timeout.cjs  fix-rust-build.cjs  install-build.cjs  package-lock.json  package.json  pm2-paths.cjs  push-server-crisp.cjs  read-rust-error.cjs  run_claw_test.js  start-rust-vnc.cjs  tail-rust-error-200.cjs  tail-rust-error.cjs  (+9 more)
claw-control-panel/: index.html  package-lock.json  package.json  ts_errors.txt  vite.config.ts
docker-testing-suite/: Dockerfile  README.md  entrypoint.sh
docs/: ARCHITECTURE.md  BROWSER_MODULE.md  MEMORY_MODULE.md  REASONING_MODULE.md  SECURITY.md  SENTRY_MODULE.md  SETUP.md  V7_CHECKLIST.md  V7_EXECUTIVE_SUMMARY.md  V7_TOOL_CONSOLIDATION.md  V7_UPGRADE_PLAN.md  V7_UPGRADE_PLAN_REVIEWED.md  VEGAMCP_COMPLETE_GUIDE.md
integration/: SwarmMonitor.tsx  vegamcp_bridge.py
scripts/: agentic_pilot.py  claw-tunnels.js  deploy-ai-powerhouse.js  deploy-linux-vps.js  deploy-vps.js  (+23 more)
vps-testing-suite/gateway-src/: Cargo.toml
vps-testing-suite/gateway-src-linux/: Cargo.toml
vps-testing-suite/gateway-src-linux/src/: main.rs
vps-testing-suite/gateway-src/src/: main.rs
(+195 files in other folders)
