[package]
name = "vega-gateway-linux"
version = "2.1.0"
edition = "2021"
authors = ["VegaMCP Team"]
description = "VegaSentinel Gateway — Linux VPS CUA Engine (The Claw)"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
